# apps/platform-server/src/main/java/com/universalplatform/identity/DefaultRoleSeeder.java
@@ -66,15 +66,15 @@ class DefaultRoleSeeder {
                 PermissionKey.TEACHING_ASSIGNMENTS_VIEW, PermissionKey.TEACHING_ASSIGNMENTS_MANAGE,
                 PermissionKey.SCHEDULE_VIEW, PermissionKey.SCHEDULE_MANAGE,
                 PermissionKey.ANNOUNCEMENTS_VIEW, PermissionKey.ANNOUNCEMENTS_MANAGE,
-                PermissionKey.CONTENT_VIEW, PermissionKey.CONTENT_MANAGE, PermissionKey.ASSESSMENTS_VIEW, PermissionKey.ASSESSMENTS_MANAGE, PermissionKey.ASSIGNMENTS_VIEW, PermissionKey.ASSIGNMENTS_MANAGE, PermissionKey.GRADEBOOK_VIEW, PermissionKey.GRADEBOOK_MANAGE, PermissionKey.GRADING_VIEW, PermissionKey.GRADING_MANAGE, PermissionKey.REVIEW_VIEW, PermissionKey.REVIEW_MANAGE);
+                PermissionKey.CONTENT_VIEW, PermissionKey.CONTENT_MANAGE, PermissionKey.LEARNING_OUTCOMES_VIEW, PermissionKey.LEARNING_OUTCOMES_MANAGE, PermissionKey.CREDENTIALS_VIEW, PermissionKey.CREDENTIALS_MANAGE, PermissionKey.CREDENTIALS_VERIFY, PermissionKey.MENTORING_VIEW, PermissionKey.MENTORING_MANAGE, PermissionKey.SURVEYS_VIEW, PermissionKey.SURVEYS_MANAGE, PermissionKey.FEEDBACK_VIEW, PermissionKey.FEEDBACK_MANAGE, PermissionKey.ASSESSMENTS_VIEW, PermissionKey.ASSESSMENTS_MANAGE, PermissionKey.ASSIGNMENTS_VIEW, PermissionKey.ASSIGNMENTS_MANAGE, PermissionKey.GRADEBOOK_VIEW, PermissionKey.GRADEBOOK_MANAGE, PermissionKey.GRADING_VIEW, PermissionKey.GRADING_MANAGE, PermissionKey.REVIEW_VIEW, PermissionKey.REVIEW_MANAGE);
         Set<PermissionKey> teacher = EnumSet.of(
                 PermissionKey.ORGANIZATION_VIEW, PermissionKey.BRANCHES_VIEW,
                 PermissionKey.ACADEMICS_VIEW, PermissionKey.CURRICULUM_VIEW,
-                PermissionKey.SCHEDULE_VIEW, PermissionKey.ANNOUNCEMENTS_VIEW, PermissionKey.CONTENT_VIEW, PermissionKey.CONTENT_MANAGE, PermissionKey.ASSESSMENTS_VIEW, PermissionKey.ASSESSMENTS_MANAGE, PermissionKey.ASSIGNMENTS_VIEW, PermissionKey.ASSIGNMENTS_MANAGE, PermissionKey.GRADEBOOK_VIEW, PermissionKey.GRADEBOOK_MANAGE, PermissionKey.GRADING_VIEW, PermissionKey.GRADING_MANAGE, PermissionKey.REVIEW_VIEW, PermissionKey.REVIEW_SUBMIT, PermissionKey.LIVE_CLASS_VIEW, PermissionKey.LIVE_CLASS_CHAT, PermissionKey.PRESENCE_VIEW, PermissionKey.RECORDINGS_VIEW, PermissionKey.RECORDINGS_MANAGE);
+                PermissionKey.SCHEDULE_VIEW, PermissionKey.ANNOUNCEMENTS_VIEW, PermissionKey.CONTENT_VIEW, PermissionKey.CONTENT_MANAGE, PermissionKey.ASSESSMENTS_VIEW, PermissionKey.ASSESSMENTS_MANAGE, PermissionKey.ASSIGNMENTS_VIEW, PermissionKey.ASSIGNMENTS_MANAGE, PermissionKey.GRADEBOOK_VIEW, PermissionKey.GRADEBOOK_MANAGE, PermissionKey.GRADING_VIEW, PermissionKey.GRADING_MANAGE, PermissionKey.REVIEW_VIEW, PermissionKey.REVIEW_SUBMIT, PermissionKey.LEARNING_OUTCOMES_VIEW, PermissionKey.CREDENTIALS_VIEW, PermissionKey.CREDENTIALS_VERIFY, PermissionKey.MENTORING_VIEW, PermissionKey.SURVEYS_VIEW, PermissionKey.FEEDBACK_VIEW, PermissionKey.LIVE_CLASS_VIEW, PermissionKey.LIVE_CLASS_CHAT, PermissionKey.PRESENCE_VIEW, PermissionKey.RECORDINGS_VIEW, PermissionKey.RECORDINGS_MANAGE);
         Set<PermissionKey> learner = EnumSet.of(
                 PermissionKey.ORGANIZATION_VIEW, PermissionKey.BRANCHES_VIEW,
                 PermissionKey.ACADEMICS_VIEW, PermissionKey.CURRICULUM_VIEW,
-                PermissionKey.SCHEDULE_VIEW, PermissionKey.ANNOUNCEMENTS_VIEW, PermissionKey.CONTENT_VIEW, PermissionKey.ASSESSMENTS_VIEW, PermissionKey.ASSIGNMENTS_VIEW, PermissionKey.ASSIGNMENTS_TAKE, PermissionKey.GRADEBOOK_VIEW, PermissionKey.REVIEW_VIEW, PermissionKey.REVIEW_SUBMIT, PermissionKey.LIVE_CLASS_VIEW, PermissionKey.LIVE_CLASS_CHAT, PermissionKey.PRESENCE_VIEW, PermissionKey.RECORDINGS_VIEW);
+                PermissionKey.SCHEDULE_VIEW, PermissionKey.ANNOUNCEMENTS_VIEW, PermissionKey.CONTENT_VIEW, PermissionKey.ASSESSMENTS_VIEW, PermissionKey.ASSIGNMENTS_VIEW, PermissionKey.ASSIGNMENTS_TAKE, PermissionKey.GRADEBOOK_VIEW, PermissionKey.REVIEW_VIEW, PermissionKey.REVIEW_SUBMIT, PermissionKey.LEARNING_OUTCOMES_VIEW, PermissionKey.CREDENTIALS_VIEW, PermissionKey.CREDENTIALS_VERIFY, PermissionKey.MENTORING_VIEW, PermissionKey.SURVEYS_VIEW, PermissionKey.FEEDBACK_VIEW, PermissionKey.LIVE_CLASS_VIEW, PermissionKey.LIVE_CLASS_CHAT, PermissionKey.PRESENCE_VIEW, PermissionKey.RECORDINGS_VIEW);
         Set<PermissionKey> support = EnumSet.of(
                 PermissionKey.ORGANIZATION_VIEW, PermissionKey.BRANCHES_VIEW,
                 PermissionKey.USERS_VIEW, PermissionKey.ROLES_VIEW, PermissionKey.SESSIONS_VIEW,
